--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^17.0.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "file-saver": "^2.0.5",
+    "pbjs": "^0.0.14",
     "prettier": "^2.5.1",
     "protobufjs": "^6.11.2",
     "react": "^17.0.2",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
